<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/serverRegisterUser"
        android:hint="@string/loginUser"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/serverRegisterPassword"
        android:hint="@string/loginPassword"
        android:layout_below="@+id/serverRegisterUser"
        android:layout_alignLeft="@+id/serverRegisterUser"
        android:layout_alignStart="@+id/serverRegisterUser"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginShowPassword"
        android:id="@+id/serverRegisterShowPassword"
        android:layout_below="@+id/serverRegisterPassword"
        android:layout_alignLeft="@+id/serverRegisterPassword"
        android:layout_alignStart="@+id/serverRegisterPassword"
        android:layout_marginTop="30dp"
        android:layout_alignRight="@+id/serverRegisterPassword"
        android:layout_alignEnd="@+id/serverRegisterPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginButton"
        android:id="@+id/loginButton"
        android:onClick="registerUser"
        android:layout_below="@+id/serverRegisterShowPassword"
        android:layout_centerHorizontal="true" />

</RelativeLayout>